crates/tokmd-format/tests/snapshots/snapshot_coverage__export_csv_empty.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 521
expression: output
---
path,module,lang,kind,code,comments,blanks,lines,bytes,tokens
