crates/tokmd-format/tests/snapshots/snapshot_coverage__export_jsonl_empty.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 530
expression: output
---

