crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_json_children_collapse.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 656
expression: json
---
{
  "args": {
    "children": "collapse",
    "format": "json",
    "top": 0,
    "with_files": false
  },
  "children": "collapse",
  "generated_at_ms": 0,
  "mode": "lang",
  "rows": [
    {
      "avg_lines": 120,
      "bytes": 50000,
      "code": 1000,
      "files": 10,
      "lang": "Rust",
      "lines": 1200,
      "tokens": 2500
    },
    {
      "avg_lines": 120,
      "bytes": 10000,
      "code": 200,
      "files": 2,
      "lang": "HTML",
      "lines": 240,
      "tokens": 500
    }
  ],
  "scan": {
    "config": "auto",
    "excluded": [],
    "hidden": false,
    "no_ignore": false,
    "no_ignore_dot": false,
    "no_ignore_parent": false,
    "no_ignore_vcs": false,
    "paths": [
      "."
    ],
    "treat_doc_strings_as_comments": false
  },
  "schema_version": 2,
  "status": "complete",
  "tool": {
    "name": "tokmd",
    "version": "0.0.0"
  },
  "top": 0,
  "total": {
    "avg_lines": 120,
    "bytes": 60000,
    "code": 1200,
    "files": 12,
    "lines": 1440,
    "tokens": 3000
  },
  "warnings": [],
  "with_files": false
}
