crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_json_empty_receipt.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 494
expression: json
---
{
  "args": {
    "children": "collapse",
    "format": "json",
    "top": 0,
    "with_files": false
  },
  "children": "collapse",
  "generated_at_ms": 0,
  "mode": "lang",
  "rows": [],
  "scan": {
    "config": "auto",
    "excluded": [],
    "hidden": false,
    "no_ignore": false,
    "no_ignore_dot": false,
    "no_ignore_parent": false,
    "no_ignore_vcs": false,
    "paths": [
      "."
    ],
    "treat_doc_strings_as_comments": false
  },
  "schema_version": 2,
  "status": "complete",
  "tool": {
    "name": "tokmd",
    "version": "0.0.0"
  },
  "top": 0,
  "total": {
    "avg_lines": 0,
    "bytes": 0,
    "code": 0,
    "files": 0,
    "lines": 0,
    "tokens": 0
  },
  "warnings": [],
  "with_files": false
}
