crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_md_children_collapse.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 591
expression: "render_lang_md(&report, ChildrenMode::Collapse)"
---
|Lang|Code|Lines|Bytes|Tokens|
|---|---:|---:|---:|---:|
|Rust|1000|1200|50000|2500|
|HTML|200|240|10000|500|
|**Total**|1200|1440|60000|3000|
